dn3/db-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: db
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      containers:
      - args:
        - --default-authentication-plugin=mysql_native_password
        image: docker.io/library/mysql:5.6
        name: database
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
