dn3/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  selector:
    app: website
  ports:
  - port: 80
    targetPort: 80
